dropdown not showing bug fixed

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -18,6 +18,7 @@
 	padding: 0;
 	min-height: 400px;
 	background: image-url('home/cover2.jpg') repeat;
+	overflow: hidden;
 
 	.bottom{
 		width: 100%;
